tests/reference/asr-subroutine3-9c6f5d1.stderr
semantic error: 'array' argument of 'size' intrinsic must be an array
 --> tests/errors/subroutine3.f90:5:14
  |
5 |     print *, size(f)
  |              ^^^^^^^ 
